# isseilib

./: .gitattributes  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  DESCRIPTION  README.md  SECURITY.md  conanfile.py  version.cmake
include/: Doxyfile.in  isseilib.h  isseilib.hpp
lib/: CMakeLists.txt  internal.h  isseilib.c  isseilib.rc.in
lib/linux/: issei.h  isseilib_linux.c  isseilib_linux.h  isseilib_sysfs.c
lib/win/: isseilib_win.c  isseilib_wmi.c  public.h
samples/: CMakeLists.txt  basic_flow.c  cpp_basic_flow.cpp  enumerate_status.c  spdm_get_version.c
tests/: CMakeLists.txt  gtest-down.cmake.in  gtest.cmake  isseilib_cpp_tests.cpp  isseilib_tests.cpp
